--- a/src/app/referentiel/referentiel-list/referentiel-list.component.html
+++ b/src/app/referentiel/referentiel-list/referentiel-list.component.html
@@ -1,184 +1,87 @@
 
-  <div class="card mt-5">
-    <div class="card-title bg-danger" > <div class="row  justify-content-center">
-      <h2 class="mr-2 titre ">Liste Des <b> Des Référentiel</b></h2>
-      <a  [routerLink]="['/referentieladd']" class="btn ml-5 btn-success" data-toggle="modal"><i class="fa fa-user-plus"></i></a>
-    </div></div>
-    <div class="row mt-5 justify-content-center">
-      <div class="col-3 ml-1 mr-2 col-md-2">
-        <table class="table table-striped table-hover text-center rounded float-right shadow-lg table-bordered">
-          <tbody>
-          <tr>
-            <td>Libelle
-              <a href="#" class="delete float-right" title="Delete" data-toggle="tooltip"><i class="fa fa-times" aria-hidden="true"></i></a>
-              <a href="#" class="edit float-right" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-            </td>
-          </tr>
-          <tr> <td class="desc">Presentation</td> </tr>
-          <tr> <td>Groupe de Competences</td> </tr>
-          <tr> <td>Programme</td> </tr>
-          <tr> <td>Critère d'évaluation</td> </tr>
-          <tr> <td>Critère d'admission</td> </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="col-3 ml-1 mr-2 col-md-2">
-        <table class="table table-striped table-hover text-center rounded float-right shadow-lg table-bordered">
-          <tbody>
-          <tr>
-            <td>Libelle
-              <a href="#" class="delete float-right" title="Delete" data-toggle="tooltip"><i class="fa fa-times" aria-hidden="true"></i></a>
-              <a href="#" class="edit float-right" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-            </td>
-          </tr>
-          <tr> <td class="desc">Presentation</td> </tr>
-          <tr> <td>Groupe de Competences</td> </tr>
-          <tr> <td>Programme</td> </tr>
-          <tr> <td>Critère d'évaluation</td> </tr>
-          <tr> <td>Critère d'admission</td> </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="col-3 ml-1 mr-2 col-md-2">
-        <table class="table table-striped table-hover text-center rounded float-right shadow-lg table-bordered">
-          <tbody>
-          <tr>
-            <td>Libelle
-              <a href="#" class="delete float-right" title="Delete" data-toggle="tooltip"><i class="fa fa-times" aria-hidden="true"></i></a>
-              <a href="#" class="edit float-right" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-            </td>
-          </tr>
-          <tr> <td class="desc">Presentation</td> </tr>
-          <tr> <td>Groupe de Competences</td> </tr>
-          <tr> <td>Programme</td> </tr>
-          <tr> <td>Critère d'évaluation</td> </tr>
-          <tr> <td>Critère d'admission</td> </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="col-3 ml-1 mr-2 col-md-2">
-        <table class="table table-striped table-hover text-center rounded float-right shadow-lg table-bordered">
-          <tbody>
-          <tr>
-            <td>Libelle
-              <a href="#" class="delete float-right" title="Delete" data-toggle="tooltip"><i class="fa fa-times" aria-hidden="true"></i></a>
-              <a href="#" class="edit float-right" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-            </td>
-          </tr>
-          <tr> <td class="desc">Presentation</td> </tr>
-          <tr> <td>Groupe de Competences</td> </tr>
-          <tr> <td>Programme</td> </tr>
-          <tr> <td>Critère d'évaluation</td> </tr>
-          <tr> <td>Critère d'admission</td> </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="col-3 ml-1 col-md-2">
-        <table class="table table-striped table-hover text-center rounded float-right shadow-lg table-bordered">
-          <tbody>
-          <tr>
-            <td>Libelle
-              <a href="#" class="delete float-right" title="Delete" data-toggle="tooltip"><i class="fa fa-times" aria-hidden="true"></i></a>
-              <a href="#" class="edit float-right" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-            </td>
-          </tr>
-          <tr> <td class="desc">Presentation</td> </tr>
-          <tr> <td>Groupe de Competences</td> </tr>
-          <tr> <td>Programme</td> </tr>
-          <tr> <td>Critère d'évaluation</td> </tr>
-          <tr> <td>Critère d'admission</td> </tr>
-          </tbody>
-        </table>
-      </div>
+
+
+      <div class="row  justify-content-center mt-5">
+      <h1 class="mr-2 titre mt-3"> <b> Liste Des Référentiel</b>
+        <a [routerLink]="['/referentieladd']" class="btn btn-outline-danger ml-5" data-toggle="modal"><i class="fas fa-plus-circle f-2 "></i></a>
+      </h1>
 
     </div>
-
     <div class="row mt-5 justify-content-center">
-      <div class="col-3 ml-1 mr-2 col-md-2">
-        <table class="table table-striped table-hover text-center rounded float-right shadow-lg table-bordered">
-          <tbody>
-          <tr>
-            <td>Libelle
-              <a href="#" class="delete float-right" title="Delete" data-toggle="tooltip"><i class="fa fa-times" aria-hidden="true"></i></a>
-              <a href="#" class="edit float-right" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-            </td>
-          </tr>
-          <tr> <td class="desc">Presentation</td> </tr>
-          <tr> <td>Groupe de Competences</td> </tr>
-          <tr> <td>Programme</td> </tr>
-          <tr> <td>Critère d'évaluation</td> </tr>
-          <tr> <td>Critère d'admission</td> </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="col-3 ml-1 mr-2 col-md-2">
-        <table class="table table-striped table-hover text-center rounded float-right shadow-lg table-bordered">
-          <tbody>
-          <tr>
-            <td>Libelle
-              <a href="#" class="delete float-right" title="Delete" data-toggle="tooltip"><i class="fa fa-times" aria-hidden="true"></i></a>
-              <a href="#" class="edit float-right" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-            </td>
-          </tr>
-          <tr> <td class="desc">Presentation</td> </tr>
-          <tr> <td>Groupe de Competences</td> </tr>
-          <tr> <td>Programme</td> </tr>
-          <tr> <td>Critère d'évaluation</td> </tr>
-          <tr> <td>Critère d'admission</td> </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="col-3 ml-1 mr-2 col-md-2">
-        <table class="table table-striped table-hover text-center rounded float-right shadow-lg table-bordered">
-          <tbody>
-          <tr>
-            <td>Libelle
-              <a href="#" class="delete float-right" title="Delete" data-toggle="tooltip"><i class="fa fa-times" aria-hidden="true"></i></a>
-              <a href="#" class="edit float-right" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-            </td>
-          </tr>
-          <tr> <td class="desc">Presentation</td> </tr>
-          <tr> <td>Groupe de Competences</td> </tr>
-          <tr> <td>Programme</td> </tr>
-          <tr> <td>Critère d'évaluation</td> </tr>
-          <tr> <td>Critère d'admission</td> </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="col-3 ml-1 mr-2 col-md-2">
-        <table class="table table-striped table-hover text-center rounded float-right shadow-lg table-bordered">
-          <tbody>
-          <tr>
-            <td>Libelle
-              <a href="#" class="delete float-right" title="Delete" data-toggle="tooltip"><i class="fa fa-times" aria-hidden="true"></i></a>
-              <a href="#" class="edit float-right" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-            </td>
-          </tr>
-          <tr> <td class="desc">Presentation</td> </tr>
-          <tr> <td>Groupe de Competences</td> </tr>
-          <tr> <td>Programme</td> </tr>
-          <tr> <td>Critère d'évaluation</td> </tr>
-          <tr> <td>Critère d'admission</td> </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="col-3 ml-1 col-md-2">
-        <table class="table table-striped table-hover text-center rounded float-right shadow-lg table-bordered">
-          <tbody>
-          <tr>
-            <td>Libelle
-              <a href="#" class="delete float-right" title="Delete" data-toggle="tooltip"><i class="fa fa-times" aria-hidden="true"></i></a>
-              <a href="#" class="edit float-right" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-            </td>
-          </tr>
-          <tr> <td class="desc">Presentation</td> </tr>
-          <tr> <td>Groupe de Competences</td> </tr>
-          <tr> <td>Programme</td> </tr>
-          <tr> <td>Critère d'évaluation</td> </tr>
-          <tr> <td>Critère d'admission</td> </tr>
-          </tbody>
-        </table>
-      </div>
+      <div class="row  justify-content-center">
+        <ng-container *ngFor="let ref of referentiels">
+          <div class="card row mt-3 mycollapse shadow-lg col-md-12 text-center" style="background-color: whitesmoke; border: 2px solid #49827c">
+            <div class="card-body">
+              <button class="float-right ml-3 supprimer " title="Delete" data-toggle="tooltip" (click)="OnDelete(ref.id)">
+                <i class="fa fa-times" aria-hidden="true"></i></button>
+              <h2 class="card-title ml-5"><b>{{ref.libelle}}</b></h2>
+
+              <p>
+                <button class="btn btn-danger disabled" type="button" data-toggle="collapse"data-target="#presentation" aria-expanded="false"  aria-controls="collapseExample">
+                  Presentation
+                </button>
+              </p>
+              <div class="row">
+                  <p class=" ml-5">{{ref.presentation}}</p>
+              </div>
+              <p>
+                <button class="btn btn-outline-danger mt-2" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false"  aria-controls="collapseExample">
+                  Groupe De Competence
+                </button>
+              </p>
+
+              <div class="collapse " id="collapseExample">
+                <div class="card card-body">
+
+                        <ng-container *ngFor="let gC of ref.groupeCompetence">
+                          <button class="btn btn-danger w-25 mt-2 ml-5">{{gC.libelle}}</button>
+                        </ng-container>
+                </div>
+              </div>
+
+              <p>
+                <button class="btn btn-outline-danger mt-2" type="button" data-toggle="collapse" data-target="#Programme" aria-expanded="false"  aria-controls="collapseExample">
+                  Programme
+                </button>
+              </p>
+
+              <div class="collapse " id="Programme">
+                <div class="card card-body">
+<!--
+                  <iframe src="data:application/pdf;base64,{{ref.programme}}" height="100%" width="100%"></iframe>-->
+                  <!--<iframe id="documentFrame" width="100%" height="600" [src]="{{ref.programme}}" *ngIf="documentData"></iframe>-->
+
+                    <iframe *ngIf="ref.programme" [src]="getPdf(ref.programme)" class="hauteur"></iframe>
+
+                </div>
+              </div>
+
+              <p>
+                <button class="btn btn-danger mt-2 disabled" type="button" data-toggle="collapse" data-target="#evaluation" aria-expanded="false"  aria-controls="collapseExample">
+                  Criteres D'evaluation
+                </button>
+              </p>
+
+              <div class="row">
+                  <p class=" ml-5">{{ref.critereDev}}</p>
+              </div>
+
+              <p>
+                <button class="btn btn-danger mt-2 disabled" type="button" data-toggle="collapse" data-target="#admission" aria-expanded="false"  aria-controls="collapseExample">
+                  Criteres D'admission
+                </button>
+              </p>
+
+              <div class="row">
+                  <p class=" ml-5">{{ref.critereDad}}</p>
+              </div>
+
+
+            </div>
+          </div>
+        </ng-container>
+
+
     </div>
   </div>
 
