--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header *ngIf="isConnected"></app-header>
-<div class="container">
+<div class="container-fluid">
   <router-outlet></router-outlet>
 </div>
 <!--app-footer></app-footer-->
