--- a/src/app/competence/competence-list/competence-list.component.html
+++ b/src/app/competence/competence-list/competence-list.component.html
@@ -42,6 +42,7 @@
              <div class="col-md-6 mt-2">
                <div class="collapse multi-collapse" id="groupeDactionniveau1">
                  <div class="card card-body">
+                   <h3 class="text-primary text-center"><b>Groupe D'action</b></h3>
                      {{n.groupeDaction}}
                  </div>
                </div>
@@ -51,6 +52,7 @@
 
                  <div class="collapse multi-collapse" id="critereDevalniveau1">
                    <div class="card card-body">
+                     <h3 class="text-primary text-center"><b>Critere D'evaluation</b></h3>
                      {{n.critereDeval}}
                    </div>
                  </div>
