--- a/src/app/profil/profil-list/profil-list.component.html
+++ b/src/app/profil/profil-list/profil-list.component.html
@@ -115,12 +115,13 @@
         <h2 *ngIf="isAddMode"> <b>Ajouter un  nouveau Profil</b></h2>
         <h2 *ngIf="!isAddMode"> <b>Modifer un Profil</b></h2>
         <form #profilForm="ngForm" (ngSubmit)="onSubmit(profilForm)">
-          <div class="form-group row col-md-6 justify-content-center">
-            <input type="text" name="libelle" class="form-control centering" ngModel required #libelleControl="ngModel">
+
+          <div class="form-group  col-md-6 decaller">
+            <input type="text" name="libelle" class="form-control centering"  value="" ngModel required #libelleControl="ngModel">
             <small *ngIf="!libelleControl.valid && libelleControl.touched" class="text-center dacaller" style="color: red">Renseignez un Profil</small>
           </div>
           <div class="form-group row mt-2 justify-content-center">
-            <button type="submit" [disabled]="!profilForm.valid" class="btn btn-danger ">Ajouter</button>
+            <button type="submit" [disabled]="!profilForm.valid" class="btn btn-danger">Ajouter</button>
           </div>
         </form>
       </div>
@@ -147,8 +148,11 @@
           <button [routerLink]="['editprofil', profil.id]" class="btn btn-sm btn-outline-danger ml-1" title="Edit" data-toggle="tooltip">
             <i class="material-icons">&#xE254;</i>
           </button>
-          <button href="#myModal" class="btn btn-sm btn-outline-primary ml-1" data-toggle="modal"><i class="material-icons">&#xE872;</i></button>
-          <div id="myModal" class="modal fade">
+          <button (click)="onDelete(profil.id)"  class="btn btn-sm btn-outline-primary ml-1">
+            <i class="material-icons">&#xE872;</i>
+          </button>
+         <!-- <button href="#myModal" class="btn btn-sm btn-outline-primary ml-1" data-toggle="modal"><i class="material-icons">&#xE872;</i></button>-->
+         <!-- <div id="myModal" class="modal fade">
             <div class="modal-dialog modal-confirm">
               <div class="modal-content">
                 <div class="modal-header flex-column">
@@ -163,48 +167,36 @@
                 </div>
                 <div class="modal-footer justify-content-center">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                  <button (click)="onDelete(profil.id)"  class="btn btn-sm btn-outline-danger ml-1">
-                    Delete
-                  </button>
+
                 </div>
               </div>
             </div>
-          </div>
+          </div>-->
         </td>
       </tr>
       </tbody>
     </table>
   </div>
   <div class="col mt-5 movedDown" *ngIf="!hiden">
-    <table class="table table-striped table-hover text-center shadow-lg  float-left w-52 mt-2 ">
-      <thead>
-      <tr>
-        <th>Avatar</th>
-        <th>Nom</th>
-        <th>Prenom</th>
-        <th>Mail</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let user of users">
-        <td> <img src="{{user.photo}}"></td>
-        <td>{{user.nom}}</td>
-        <td>{{user.prenom}}</td>
-        <td>{{user.email}}</td>
-      </tr>
-      </tbody>
-    </table>
-    <div class="row">
-      <ul class="pagination">
-        <li class="page-item disabled"><a href="#">Previous</a></li>
-        <li class="page-item"><a href="#" class="page-link">1</a></li>
-        <li class="page-item"><a href="#" class="page-link">2</a></li>
-        <li class="page-item active"><a href="#" class="page-link">3</a></li>
-        <li class="page-item"><a href="#" class="page-link">4</a></li>
-        <li class="page-item"><a href="#" class="page-link">5</a></li>
-        <li class="page-item"><a href="#" class="page-link">Next</a></li>
-      </ul>
-    </div>
+    <p-table [value]="users" [paginator]="true" [rows]="10"class="table table-striped table-hover text-center shadow-lg  float-left w-52 mt-2 ">
+      <ng-template pTemplate="header">
+        <tr>
+          <th>Avatar</th>
+          <th>Nom</th>
+          <th>Prenom</th>
+          <th>Mail</th>
+
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-user>
+        <tr>
+          <td> <img class="rounded-circle w-75" src="data:image/png;base64,{{user.photo}}" alt="Pas d'avatar Encore"></td>
+          <td>{{user.nom}}</td>
+          <td>{{user.prenom}}</td>
+          <td>{{user.email}}</td>
+          <td>
+      </ng-template>tr>
+    </p-table>
   </div>
 </div>
 <!--<div class="text-center">
