--- a/src/app/referentiel/referentiel-list/referentiel-list.component.css
+++ b/src/app/referentiel/referentiel-list/referentiel-list.component.css
@@ -4,3 +4,11 @@
 table:hover{
   background-color: orange;
 }
+.supprimer{
+ color: red;
+  background-color: white;
+  border: 1px solid red;
+}
+.hauteur{
+  height: 500px;
+}
