--- a/src/app/users/users-add/users-add.component.html
+++ b/src/app/users/users-add/users-add.component.html
@@ -2,7 +2,7 @@
   <div class="card shadow-lg p-3 mb-5 bg-white rounded shadow-lg p-3 mt-5 bg-white rounded float-left ml-5" style="width: 30rem;">
     <img class="card-img-top" src="assets/images/sa.jpeg" alt="Card image cap" height="150px">
     <div class="card-body">
-      <h5 class="card-title text-center">Nouveau Utilisateur</h5>
+      <h1 class="card-title text-center"><b>Nouveau Utilisateur</b></h1>
 
 
       <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
@@ -18,11 +18,11 @@
          <div class="form-group col-md-6">
            <div class="blocavata imgavatar" >
              <div>
-               <img class="avatarprofil" style="height: 100px; width: 100px"/>
+               <img class="avatarprofil"  style="height: 100px; width: 100px" *ngIf="imageUrl" [src]="imageUrl">
              </div>
            </div>
          </div>
-        </div>
+
 
         <div class="form-row">
           <div class="form-group col-md-6">
@@ -75,7 +75,7 @@
         </div>
         <div class="row">
           <div class="custom-file">
-            <input type="file" class="custom-file-input"  lang="es"  formControlName="photo" (change)="onFileSelect($event)" accept="image/png, image/jpeg">
+            <input type="file" class="custom-file-input"  lang="es" #Image  formControlName="photo" (change)="onFileSelect($event)" (change)="handleFileInput($event.target['files'])" accept="image/png, image/jpeg">
             <label class="custom-file-label">Choisir Votre Avatar</label>
           </div>
 
@@ -88,8 +88,11 @@
           <div class="form-row mt-5">
             <button class="btn btn-block" type="submit" [disabled]="!registerForm.valid" style="background-color: orange">Enregistrer</button>
           </div>
-  </form>
-    </div>
+        </div>
+
+        <!--<input #Image type="file" (change)="handleFileInput($event.target['files'])"/>-->
+
+      </form>
   </div>
 </div>
 
