--- a/src/app/users/users-list/users-details/users-details.component.css
+++ b/src/app/users/users-list/users-details/users-details.component.css
@@ -4,3 +4,25 @@
 .moved{
   margin-top: 100px;
 }
+img{
+  width: 110%;
+  height: 120px;
+  border-radius: 50%;
+  float: left;
+
+
+}
+.bshadow {
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  filter: drop-shadow(5px 5px 5px #222222);
+  opacity: .5;
+
+}
+.taille{
+  height: 300px;
+  background-image: url("src/assets/images/b3.jpg");
+}
+
