--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -1,3 +1,4 @@
+<!--
 
 
 <div class="row">
@@ -50,6 +51,56 @@
     <router-outlet></router-outlet>
   </div>
 </div>
+-->
+
+
+<div class="row mt-5">
+  <div class="col-md-8  text-center">
+    <h1><b>Liste Des Utilisateurs</b>
+      <a [routerLink]="['usersadd']" class="btn btn-outline-danger bntadd" data-toggle="modal"><i class="fa fa-user-plus"></i></a>
+    </h1>
+
+  </div>
+</div>
+<div class="row">
+
+
+  <div class="row">
+
+    <div class="col col-md-7">
+      <p-table [value]="users" [paginator]="true" [rows]="10" class="table table-striped table-hover text-center shadow-lg  float-left  mt-2">
+        <ng-template pTemplate="header">
+          <tr>
+            <th>Nom</th>
+            <th>Prenom</th>
+            <th>Mail</th>
+            <th>Actions</th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-user>
+          <tr>
+            <td>{{user.nom}}</td>
+            <td>{{user.prenom}}</td>
+            <td>{{user.email}}</td>
+            <td>
+              <button [routerLink]="['details',user.id]" class="btn btn-sm btn-outline-info" title="View" data-toggle="tooltip"><i class="material-icons">&#xE417;</i></button>
+              <button [routerLink]="['edit',user.id]"class=" btn btn-sm btn-outline-danger ml-1" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></button>
+              <button  (click)="OnDeleteUser(user.id)" class="btn btn-outline-primary btn-sm ml-1" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></button>
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </div>
+
+
+    <div class="col">
+      <router-outlet></router-outlet>
+    </div>
+
+  </div>
+</div>
+
+
 
 
 
